Create full MVC for sign_up without styling
Chua co css cho _form, _error_messages

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,3 +73,21 @@ en:
       contain5: "to teach web development with"
       contain6: "Ruby on Rails"
       contain7: "This is the sample application for the tutorial."
+  email: "Email"
+  name: "Name"
+  division: "Division"
+  position: "Position"
+  password: "Password"
+  password_confirmation: "Password Confirmation"
+  user_code: "User code"
+  skill: "Skill"
+  success: "success"
+  user_not_found: "User not found"
+  users:
+    new:
+      title: "Sign up"
+      submit: "Create account"
+  shared:
+    error_messages:
+      error_contain: "This form contains "
+      error: "error"
