Init search, delete user

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -130,6 +130,7 @@ en:
   request:
     one: "%{count} request"
     other: "%{count} requests"
+  search: "Search"
   users:
     new:
       title: "Sign up"
